tests/expectations/compiler/statements/multiple_returns_in_one_block_fail.out
Error [ETYC0372025]: Cannot reach the following statement.
    --> compiler-test:6:5
     |
   6 |     let double: u32 = x + x;
     |     ^^^^^^^^^^^^^^^^^^^^^^^^
     |
     = Remove the unreachable code.
Error [ETYC0372025]: Cannot reach the following statement.
    --> compiler-test:7:5
     |
   7 |     return double;
     |     ^^^^^^^^^^^^^^
     |
     = Remove the unreachable code.
Error [ETYC0372083]: A program must have at least one entry point fn.
    --> compiler-test:2:9
     |
   2 | program test.aleo {
     |         ^^^^^^^^^
